log_output/manifests/log-output.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-output-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-output
  template:
    metadata:
      labels:
        app: log-output
    spec:
      containers:
      - name: log-output
        image: chenoc/log-output-app:v1
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
