log_output/manifests/logwithvol.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-output-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-output
  template:
    metadata:
      labels:
        app: log-output
    spec:
      volumes:
        - name: log-ping-vol
          persistentVolumeClaim:
            claimName: shared-claim
      containers:
      - name: log-output
        image: chenoc/log-output-app:v7
        volumeMounts:
          - name: log-ping-vol
            mountPath: /mnt/data
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
