log_output/manifests/log-svc-read.yaml
apiVersion: v1
kind: Service
metadata:
  name: log-output-svc
spec:
  type: NodePort
  selector:
    app: log-read-write
  ports:
    - port: 2234
      nodePort: 30080
      protocol: TCP
      targetPort: 8080
