log_output/manifests/log-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: log-output-svc
  namespace: exercises
spec:
  type: ClusterIP
  selector:
    app: log-output
  ports:
    - port: 8081
      protocol: TCP
      targetPort: 8081
